--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "main": "src/main/js/main.js",
     "scripts": {
         "prepublishOnly": "grunt build:release",
-        "version": "grunt build:release && git add -A dist",
+        "version": "grunt build:release && gulp && git add -A dist",
         "postversion": "git push --tags"
     },
     "dependencies": {
         "sax": "1.2.1"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
         "browserify": "^16.2.3",
+        "esm": "^3.2.25",
         "filesaver.js-npm": "latest",
         "google-closure-compiler": "^20180910.1.0",
         "grunt": "latest",
@@ -47,9 +50,11 @@
         "grunt-exec": "^3.0.0",
         "grunt-npmcopy": "latest",
         "grunt-sync": "latest",
+        "gulp": "^4.0.2",
         "jszip": "latest",
         "node-qunit": "^1.0.0",
         "qunit-assert-close": "latest",
-        "qunitjs": "latest"
+        "qunitjs": "latest",
+        "rollup-plugin-terser": "^7.0.2"
     }
 }
