--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "main": "src/main/js/main.js",
     "scripts": {
         "prepublishOnly": "grunt build:release",
-        "version": "grunt build:release && gulp && git add -A dist && git add pom.xml",
+        "version": "grunt build:release && gulp && git add -A dist",
         "postversion": "git push --tags"
     },
     "dependencies": {
@@ -56,6 +56,7 @@
         "qunit-assert-close": "latest",
         "qunitjs": "latest",
         "rollup": "^2.34.1",
+        "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-terser": "^7.0.2"
     }
 }
